# djen-backup

./: .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  pyproject.toml
.github/workflows/: backup.yml
features/: absent_marking.feature  backfill.feature  circuit_breaker.feature  collect.feature  deadline.feature  gap_detection.feature  ratcheting.feature
features/steps/: conftest.py  test_absent_marking.py  test_backfill.py  test_circuit_breaker.py  test_collect.py  test_deadline.py  test_gap_detection.py  test_ratcheting.py
src/djen_backup/: __init__.py  __main__.py  archive.py  backfill.py  credentials.py  djen.py  retry.py  runner.py  state.py  tribunais.py
