[project]
name = "djen-backup"
version = "0.1.0"
description = "Complete backup of Brazil's DJEN (Diário de Justiça Eletrônico Nacional) to the Internet Archive"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "structlog>=24.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-bdd>=7.0",
    "respx>=0.21",
    "anyio>=4.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[project.scripts]
djen-backup = "djen_backup.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/djen_backup"]

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["djen_backup"]
mypy_path = "src"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.pytest.ini_options]
testpaths = ["features/steps"]
asyncio_mode = "auto"
